# grc-policy-server

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.gpu  Dockerfile.hybrid  Makefile  PRODUCTION.md  README.md  docker-compose-prod.yml  docker-compose.opik.yml  docker-compose.yml  opik_nginx_default_local.conf  pyproject.toml  python@3.13
.github/workflows/: ci.yml  docker-publish.yml
docs/: 01_phase_wise_implementation.md  README.md  architecture.md  design.md  llm_resource_constraints.md  presentation.md  workflow.md
docs/uml/: README.md  compare-sequence.mmd  component.mmd  (+5 more)
evaluation_results/: 01_accuracy_report.json  01_evaluation_report.md  01_validation_report.json  02_accuracy_report.json  02_gap_analysis_and_improvement_plan.md  03_accuracy_report.json  03_evaluation_report.md  04_accuracy_report.json  04_evaluation_report.md  04_validation_report.json  05_accuracy_report.json  05_evaluation_report.md  05_validation_report.json  06_accuracy_report.json  06_evaluation_report.md  06_validation_report.json  07_accuracy_report.json  08_accuracy_report.json  09_accuracy_report.json  10_accuracy_report.json  11_accuracy_report.json  12_accuracy_report.json  13_accuracy_report.json  14_accuracy_report.json  15_accuracy_report.json  16_accuracy_report.json  _accuracy_report.json  _evaluation_report.md
knowledge_base/: GRC_Auditor_Offline_KB_All_In_One.md  README.md
localconf/: conf.MD  instructions.md
scripts/: audit_extraction.py  dev.sh  entrypoint.sh
tests/: test_accuracy_improvements.py  test_api.py  test_canonical_comparison.py  test_canonical_table_model.py  test_celery_task_registration.py  test_cir_models.py  test_column_mapper.py  test_comparison_cache.py  test_config.py  test_emc_ontology.py  test_extraction_validator.py  test_health.py  test_ingestion_pipeline.py  test_logging.py  test_ollama_client.py  test_row_key_extractor.py  test_section_6_1_5_table.py  test_severity_engine_v2.py  test_table_diff_engine.py  test_table_extraction_ensemble.py  test_table_identity_resolver.py  test_table_identity_resolver_v2.py  test_testing_department.py  test_worker_stdin.py
todo/: GRC-AI-Auditor.md  RedesignProductgoals.MD  StorageModel.MD  architectural.MD  compareDocs.MD  corePlatform.md  improveAccuracy.MD  improveAccuracyv2.MD  llm_request.MD  logicalModel.md  referencetree.md  systemComponents.md  tableAndComparisionAccuracy.md
(+157 files in other folders)
