[project]
name = "grc-policy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.4.0",
    "docling>=2.73.0",
    "docling-core>=2.64.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "neo4j>=6.1.0",
    "neo4j-graphrag>=1.13.0",
"pydantic-settings>=2.11.0",
    "pymongo>=4.16.0",
    "pypdfium2>=5.4.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "sse-starlette>=3.2.0",
    "structlog>=25.5.0",
    "uvicorn>=0.39.0",
    "weaviate-client>=4.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=1.3.0",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
